# loadbench

./: Cargo.toml  README.md  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yaml
examples/: noop.rs  sleep.rs  ycsb.rs
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/loadbench/output_sink/: trait.OutputSink.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
loadbench/: all.html  fn.generate_load.html  index.html  sidebar-items.js  struct.Output.html  struct.OutputCore.html
loadbench/client/: index.html  sidebar-items.js  trait.Dispatcher.html  trait.DispatcherGenerator.html
loadbench/input/: index.html  sidebar-items.js  trait.InputGenerator.html
loadbench/loadgen/: fn.generate_load.html
loadbench/output/: struct.Output.html  struct.OutputCore.html
loadbench/output_sink/: index.html  sidebar-items.js  struct.CsvOutputSink.html  struct.NoOpOutputSink.html  struct.StatsOutputSink.html  trait.OutputSink.html
src/: client.rs  input.rs  lib.rs  loadgen.rs  output.rs  output_sink.rs  writer.rs
src/loadbench/: client.rs.html  input.rs.html  lib.rs.html  loadgen.rs.html  output.rs.html  output_sink.rs.html
