[package]
name = "loadbench"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2021"

[dependencies]
async-channel = "1.8.0"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync", "time"] }
tracing = "0.1.37"
csv = "1.2.2"

[dev-dependencies]
clap = { version = "4.3.21", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rand = "0.8.5"
rand_distr = "0.4.3"
